# mysqlftppc-space

./: INSTALL  Makefile.am  README  configure.in  ftbool.c  ftbool.h  ftnorm.c  ftstring.c  mysql-5.1.28-rc.patch  plugin_space.c
test/: test.sql
